Update Sujun's CIHR postdoctoral award

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 02/05/2022
+  headline: "Sujun received the CIHR postdoctoral award! Congratulations to her!"
+
 - date: 25/04/2022
   headline: "We welcome Yujuan Wang to join our lab for her postdoctoral training!"
 
