Update Hansen's promotion

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 01/07/2022
+  headline: "Hansen has been promoted to full professor! HOORRAY!"
+
 - date: 02/05/2022
   headline: "Sujun received the CIHR postdoctoral award! Congratulations to her!"
 
