Update joint party

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 08/07/2022
+  headline: "Joint lab party was held at woodbine beach with the Notta lab."
+
 - date: 01/07/2022
   headline: "Hansen has been promoted to full professor! HOORRAY!"
 
