--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 14/07/2022
+  headline: "Vivian received a Canadian Scholarship Trust Foundation Founders’ Awards https://www.cstfoundation.ca/student-awards/founders-award. Congratulations to Vivian!"
+
 - date: 08/07/2022
   headline: "Joint lab party was held at woodbine beach with the Notta lab."
 
