Revise Vivian's award.

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 14/07/2022
-  headline: "Vivian received a Canadian Scholarship Trust Foundation Founders’ Awards https://www.cstfoundation.ca/student-awards/founders-award. Congratulations to Vivian!"
+  headline: "Vivian received a Canadian Scholarship Trust Foundation Founders’ Awards. Learn more <a href='https://www.cstfoundation.ca/student-awards/founders-award'>here</a>. Congratulations to Vivian!"
 
 - date: 08/07/2022
   headline: "Joint lab party was held at woodbine beach with the Notta lab."
