--- a/_data/principle_investigator.yml
+++ b/_data/principle_investigator.yml
@@ -1,7 +1,7 @@
 - name: Hansen He
   photo: hansen.jpg
   info: "Senior Scientist, Princess Margaret Cancer Centre, University Health Network"
-  info2: "Associate Professor, Department of Medical Biophysics, University of Toronto"
+  info2: "Professor, Department of Medical Biophysics, University of Toronto"
   info3: "Joey and Toby Tanenbaum Brazilian Ball Chair in Prostate Cancer Research, University of Toronto"
   email: Hansen.He@uhnresearch.ca
   description: "Dr. He is an experimental and computational biologist at Princess Margaret Cancer Centre. His research program focuses on understanding epigenetic mechanisms underlying cancer development, progression and therapy response, with the aim of identifying epigenetic biomarkers and therapeutic targets to improve treatment outcomes of cancer patients."
