--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,14 +1,38 @@
+- title: Neonatal LTβR signaling is required for the accumulation of eosinophils in the inflamed adult mesenteric lymph node
+  authors: 1.	Li C, Ward L, Nguyen A, Lam E, Dasoveanu D, Ahmed M, Haniuda K, Buechler M, He H, Ludewig B, McNagny K, Gommerman J
+  link:
+    url: https://www.nature.com/articles/s41385-022-00493-z
+    display: "Mucosal Immunology. 2022. PMID: 35181738."
+    
+- title: Exploiting the tumor-suppressive activity of the androgen receptor by CDK4/6 inhibition in castration-resistant prostate cancer
+  authors: Han W, Liu M, Han D, Toure A, Li M, Besschetnova A, Wang A, Patalano S, Macoska J, Lam H, Corey E, He H, Gao G, Balk S, Cai C
+  link:
+    url: https://www.cell.com/molecular-therapy-family/molecular-therapy/fulltext/S1525-0016(22)00078-8
+    display: "Molecular Therapy. 2022. PMID: 35121110."
+
+- title: Subpathologies and genomic classifier for treatment individualization of post-prostatectomy radiotherapy
+  authors: Ramotar M, Chua M, Truong H, Hosni A, Pintilie M, Davicioni E, Fleshner N, Dicker A, Bristow R, He H, van der Kwast T, Den R, Berlin B
+  link:
+    url: https://pubmed.ncbi.nlm.nih.gov/34538726/
+    display: "Urologic Oncology: Seminars and Original Investigations. 2022. PMID: 34538726."
+
+- title: The basis and promise of programmable RNA editing and modification
+  authors: Lo N*, Xu X*, Soares F#, He H#
+  link:
+    url: https://www.frontiersin.org/articles/10.3389/fgene.2022.834413/full
+    display: "Frontiers in Genetics. 2022. PMID: 35154288."
+
 - title: N6-methyladenosine reader YTHDF1 promotes ARHGEF2 translation and RhoA signaling in colorectal cancer
   authors: Wang S*, Gao S*, Zeng Y*, Zhu L, Mo Y, Wong CC, Bao Y, Su P, Zhai J, Wang L, Soares F, Xu X, Chen H, Hezaveh K, Ci X, He A, McGaha T, O'Brien C, Rottapel R, Kang W, Wu J, Zheng G, Cai Z, Yu J, He HH#
   link:
     url: https://www.gastrojournal.org/article/S0016-5085(21)04165-2/fulltext
-    display: "Gastroenterology. In press."
+    display: "Gastroenterology. 2022. PMID: 34968454."
 
 - title: RB1 loss in castration-resistant prostate cancer confers vulnerability to LSD1 inhibition
   authors: Han W, Liu M, Han D, Li M, Toure A, Wang Z, Besschetnova A, Patalano S, Macoska J, Gao S, He H, and Cai C
   link:
     url: https://cancerres.aacrjournals.org/content/81/13_Supplement/2509.short
-    display: "Oncogene. In press. IF=7.97"
+    display: "Oncogene. 2022. PMID: 34975152. IF=7.97"
 
 - title: Androgen receptor and MYC equilibration centralizes on developmental super-enhancer
   authors:  Guo H*, Yiming W*, Spisak S, Russo J, Sowalsky A, Pomerantz M, Wei Z, Korthauer K, Heui Seo J, Wang L, Arai S, Nouri M, Freedman M, He H#, Chen S#, Balk S#
