--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,5 +1,5 @@
 - title: Neonatal LTβR signaling is required for the accumulation of eosinophils in the inflamed adult mesenteric lymph node
-  authors: 1.	Li C, Ward L, Nguyen A, Lam E, Dasoveanu D, Ahmed M, Haniuda K, Buechler M, He H, Ludewig B, McNagny K, Gommerman J
+  authors: Li C, Ward L, Nguyen A, Lam E, Dasoveanu D, Ahmed M, Haniuda K, Buechler M, He H, Ludewig B, McNagny K, Gommerman J
   link:
     url: https://www.nature.com/articles/s41385-022-00493-z
     display: "Mucosal Immunology. 2022. PMID: 35181738."
