--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,27 @@
+- date: 15/12/2022
+  headline: "Sujun commenced on her independent laboratory at Sichuan University, congratulations!"
+  
+- date: 01/12/2022
+  headline: "Chengpeng and Jiaying joined us as postdoctoral fellows, welcome!"
+
+- date: 01/12/2022
+  headline: "Vivian, Magnus and Lin joined us as graduate students, welcome!"
+  
+- date: 22/11/2022
+  headline: "Mona recieved a Keystone Symposia Scholarship, congratulations!"
+  
+- date: 01/11/2022
+  headline: "Out collaborative study of 5hmC in prostate tumors and liquid biopsies is online at PNAS."
+
+- date: 29/10/2022
+  headline: "Our work on 5mC in prostate cancer liquid biopsies is online at Nature Communications."
+  
+- date: 01/10/2022
+  headline: "Ziting Judy Xia joined our laboratory for her undergraduate thesis project, welcome!"
+
+- date: 01/09/2022
+  headline: "Shiyan commenced on her independent laboratory at Sun Yet-Sen University, congratulations!"
+
 - date: 14/07/2022
   headline: "Vivian received a Canadian Scholarship Trust Foundation Founders’ Awards. Learn more <a href='https://www.cstfoundation.ca/student-awards/founders-award'>here</a>. Congratulations to Vivian!"
 
