--- a/_data/news.yml
+++ b/_data/news.yml
@@ -23,7 +23,7 @@
   headline: "Shiyan commenced on her independent laboratory at Sun Yet-Sen University, congratulations!"
 
 - date: 14/07/2022
-  headline: "Vivian received a Canadian Scholarship Trust Foundation Founders’ Awards. Learn more <a href='https://www.cstfoundation.ca/student-awards/founders-award'>here</a>. Congratulations to Vivian!"
+  headline: "Vivian received a Canadian Scholarship Trust Foundation Founders’ Award. Congratulations to Vivian!"
 
 - date: 08/07/2022
   headline: "Joint lab party was held at woodbine beach with the Notta lab."
