--- a/_data/news.yml
+++ b/_data/news.yml
@@ -11,7 +11,7 @@
   headline: "Mona recieved a Keystone Symposia Scholarship, congratulations!"
   
 - date: 01/11/2022
-  headline: "Out collaborative study of 5hmC in prostate tumors and liquid biopsies is online at PNAS."
+  headline: "Our collaborative study of 5hmC in prostate tumors and liquid biopsies is online at PNAS."
 
 - date: 29/10/2022
   headline: "Our work on 5mC in prostate cancer liquid biopsies is online at Nature Communications."
