--- a/_data/postdoctoral_fellows.yml
+++ b/_data/postdoctoral_fellows.yml
@@ -33,3 +33,15 @@
   info: Postdoctoral Fellow
   email: sujun.chen@mail.utoronto.ca
   description: Sujun recieved her MSc degree in bioinformatics from Tongji University. She completed her PhD in the Department of Medical Biophysics at U of T. Her research is focused on circular RNA detection and regulation.
+ 
+- name: Chengpeng Gui
+  photo: chengpeng.jpg
+  info: Postdoctoral Fellow
+  email:
+  description:
+
+- name: Jiaying Li
+  photo: jiaying.jpg
+  info: Postdotoral Fellow
+  email: lijy685@mail.sysu.edu.cn
+  description: 
