--- a/_data/alumni.yml
+++ b/_data/alumni.yml
@@ -13,6 +13,11 @@
   info: Summer Student
   current:
 
+- name: Michelle MacNeily
+  photo: Michelle.jpg
+  info: Summer Research Student
+  current:
+
 - name: Xinyi Zhang
   photo: xinyi.jpg
   info: Summer Student
