--- a/_data/alumni.yml
+++ b/_data/alumni.yml
@@ -8,6 +8,11 @@
   info: Postdoctoral Fellow
   current:
 
+- name: Rui Zhu
+  photo: rui.jpg
+  info: Visiting Scholar
+  current:
+
 - name: Kashif Daud
   photo: kashif.jpeg
   info: Summer Student
