--- a/_data/graduate_students.yml
+++ b/_data/graduate_students.yml
@@ -20,7 +20,7 @@
   photo: linsey.png
   info: MSc Student
   email: linsey.gong@mail.utoronto.ca
-  description: Linsey obtained her bachelor’s degree from the University of Toronto with a double major in Molecular Genetics and Pharmacology. Currently, she is an MSc student in the Department of Medical Biophysics as co-supervised by Dr. Faiyaz Notta. Linsey is investigating the usage of circulating extracellular RNAs as diagnostic and predictive biomarkers in pancreatic cancer. 
+  description: Linsey obtained her bachelor’s degree from the University of Toronto with a double major in Molecular Genetics and Pharmacology. Currently, she is an MSc student in the Department of Medical Biophysics and co-supervised by Dr. Faiyaz Notta. Linsey is investigating the usage of circulating extracellular RNAs as diagnostic and predictive biomarkers in pancreatic cancer. 
 
 - name: Peter Her
   photo: peter.jpeg
