--- a/_data/alumni.yml
+++ b/_data/alumni.yml
@@ -19,7 +19,7 @@
   current:
 
 - name: Michelle MacNeily
-  photo: Michelle.jpg
+  photo: michelle.jpg
   info: Summer Research Student
   current:
 
