--- a/_data/alumni.yml
+++ b/_data/alumni.yml
@@ -1,3 +1,18 @@
+- name: Guanghui Zhu
+  photo: guanghui.jpg
+  info: Postdoctoral Fellow
+  current:
+  
+- name: Sujun Chen
+  photo: sujun.jpg
+  info: Postdoctoral Fellow
+  current:
+
+- name: Shiyan Wang
+  photo: shiyan.jpeg
+  info: Postdoctoral Fellow
+  current:
+
 - name: Yong Zeng
   photo: yong.jpg
   info: Postdoctoral Fellow
