--- a/_data/postdoctoral_fellows.yml
+++ b/_data/postdoctoral_fellows.yml
@@ -16,6 +16,12 @@
   email: xinpei.ci@uhnresearch.ca
   description: Xinpei obtained her PhD degree in Genetics at Nankai University, China, and received a two-year joint training at Emory University, USA. Her PhD work studied the role of a prostate cancer suppressor gene by using genetically engineered mouse models. She completed her first postdoc training under the supervision of Dr.Yuzhuo Wang at the Vancouver Prostate Centre, UBC, where she utilized patient-derived xenograft models to identify and study driver genes in prostate cancer hormonal therapy resistance. Xinpei joined Dr. Hansen He’s lab in December 2020 and is currently working on epigenetic mechanisms involved in neuroendocrine prostate cancer.
 
+- name: Tianyi Chen
+  photo: tianyi.jpg
+  info: Postdoctoral Fellow
+  email:
+  description:
+
 - name: Chengpeng Gui
   photo: chengpeng.jpg
   info: Postdoctoral Fellow
