--- a/_data/undergraduate_students.yml
+++ b/_data/undergraduate_students.yml
@@ -1,5 +1,5 @@
 - name: Ziting (Judy) Xia
-  photo: judy-xia.jpg
+  photo: judy-xia.jpeg
   info: Undergraduate Thesis Student
   email: judy.xia@mail.utoronto.ca
   description: "Judy is currently a 4th year Chemical Engineering at University of Toronto. She is supervised by Mona and works on a project to investigate the regulatory mechanism of proteins by circular RNA." 
