--- a/_data/graduate_students.yml
+++ b/_data/graduate_students.yml
@@ -41,7 +41,7 @@
   description: Magnus obtained his Honours Bachelor of Science from the University of Toronto Scarborough in the Molecular Biology and Biotechnology Co-op program. He spent his Co-op term at the Princess Margaret Cancer Biobank as a Technician. He is currently a Masters student in the Department of Medical Biophysics. His research interests are identifying epigenetic-based therapeutic targets in prostate cancer and the potential of using circulating bacterial DNA methylome as a cancer biomarker.
 
 - name: Lin Yang
-  photo: lin.jpg
+  photo: lin-yang.png
   info: PhD Student
   email: ln.yang@mail.utoronto.ca
   description: Lin obtained his master’s degree in Bioinformatics from George Washington University in the U.S. He is currently a PhD student in the Department of Medical Biophysics. He is interested in methodology development based on the High-throughput sequencing data specific for single-cell level. Lin is also co-supervised by Dr. Schwartz to develop new algorithms to integrate multiple modularities to infer cell lineage.
