--- a/_data/postdoctoral_fellows.yml
+++ b/_data/postdoctoral_fellows.yml
@@ -17,10 +17,10 @@
   description: Xinpei obtained her PhD degree in Genetics at Nankai University, China, and received a two-year joint training at Emory University, USA. Her PhD work studied the role of a prostate cancer suppressor gene by using genetically engineered mouse models. She completed her first postdoc training under the supervision of Dr.Yuzhuo Wang at the Vancouver Prostate Centre, UBC, where she utilized patient-derived xenograft models to identify and study driver genes in prostate cancer hormonal therapy resistance. Xinpei joined Dr. Hansen He’s lab in December 2020 and is currently working on epigenetic mechanisms involved in neuroendocrine prostate cancer.
 
 - name: Tianyi Chen
-  photo: tianyi.jpg
+  photo: tianyi-chen.png
   info: Postdoctoral Fellow
-  email:
-  description:
+  email: tianyi.chen@uhn.ca
+  description: Tianyi went to Purdue University for college where she majored in Math and Biology. After graduation, she worked as a research associate in Indiana University Bloomington for about two years before attending graduate school at Duke University in 2016. For her PhD study, she worked on liver regeneration project in which she applied single cell omics analysis and molecular genetics to understand how mammalian liver orchestrates its effective tissue recovery in response to acute injury. Tianyi joined He lab in September 2022. Outside of the lab, she enjoys reading, hiking, running, and playing with her cat :)
 
 - name: Chengpeng Gui
   photo: chengpeng.jpg
