--- a/_data/postdoctoral_fellows.yml
+++ b/_data/postdoctoral_fellows.yml
@@ -30,6 +30,6 @@
 
 - name: Jiaying Li
   photo: jiaying.jpg
-  info: Postdotoral Fellow
+  info: Postdoctoral Fellow
   email: lijy685@mail.sysu.edu.cn
   description: 
