--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,21 @@
+- title: The cell free DNA methylation captures distinctions between localized and metastatic prostate cancer
+  authors: Chen S*, Petricca J*, Ye W*, Shen SY, Guan J, Burgener J, Kwast T, Bratman S, Liu S, Joshua A, DeCarvalho D, Ji G#, Feng F#, Wyatt A#, He H#
+  link:
+    url: https://www.nature.com/articles/s41467-022-34012-2
+    display: "Nature Communications. 2022. PMID: 36309516"
+
+- title: The 5-hydroxymethylcytosine landscape of prostate cancer
+  authors: Sjöström M, Zhao S, Levy S, Zhang M, Ning Y, Shrestha R, Lundberg A, Herberts C, Foye A, Aggarwal R, T. Hua J, Li H, Bergamaschi A, Maurice-Dror C, Maheshwari A, Chen S, Ng S, Ye W, Petricca J, Fraser M, Chesner L, Perry M, Moreno-Rodriguez T, Chen W, Joshi J. Alumkal J, Chou J, Beer T, Gleave M, Lloyd P, Phillips T, McCarthy E, Haffner M, Zoubeidi A, Reiter R, Rettig M, Witte O, Fong L, Bose R, Huang F, Bjartell A, Lang J, Mahajan N, Lara P, Evans C, Tran P, Posadas E, He C, Cui X, Huang J, Zwart W, Gilbert L, Maher C, Boutros P, Chi K, Ashworth A, Small E, He H#, Wyatt A#, Quigley D#, Feng F#
+  link:
+    url: https://aacrjournals.org/cancerres/article/82/21/3888/709960/The-5-Hydroxymethylcytosine-Landscape-of-Prostate
+    display: "Cancer Research. 2022. PMID: 36251389"
+
+- title: Cyclin K down-regulation induces androgen receptor gene intronic polyadenylation, variant expression and PARP inhibitor vulnerability in castration-resistant prostate cancer
+  authors: Sun R, Wei T, Ding D, Zhang J, Chen S, He H, Wang L, Huang H
+  link:
+    url: https://www.pnas.org/doi/full/10.1073/pnas.2205509119
+    display: "PNAS. 2022. PMID: 36129942."
+
 - title: Neonatal LTβR signaling is required for the accumulation of eosinophils in the inflamed adult mesenteric lymph node
   authors: Li C, Ward L, Nguyen A, Lam E, Dasoveanu D, Ahmed M, Haniuda K, Buechler M, He H, Ludewig B, McNagny K, Gommerman J
   link:
