--- a/_data/postdoctoral_fellows.yml
+++ b/_data/postdoctoral_fellows.yml
@@ -26,10 +26,10 @@
   photo: chengpeng-gui.jpg
   info: Postdoctoral Fellow
   email: chengpeng.gui@uhn.ca
-  description: Chengpeng acquired his MD degree in major of Urological Surgery at Sun Yat-sen University, China. His MD work studied the role of circCHST15 in renal cell carcinoma progression by using in vitro & in vivo experiments，also mining genetic predictive model, through multi-omics bioinformatics analyses. He seeks to identify and study circular RNAs in prostate cancer precision therapy. And Chengpeng joined Dr. Hansen He’s lab in December 2022 and is currently working on circRNA database building, circulation mechanisms and circRNA interaction with TF involved in neuroendocrine prostate cancer.
+  description: Chengpeng acquired his MD degree in major of Urological Surgery at Sun Yat-sen University, China. His MD work studied the role of circCHST15 in renal cell carcinoma progression using in vitro & in vivo experiments and mining a genetic predictive model through multi-omics bioinformatics analyses. He seeks to identify and study circular RNAs in prostate cancer precision therapy. He is currently working on circRNA database building, circulation mechanisms and circRNA interaction with TF involved in neuroendocrine prostate cancer.
 
 - name: Jiaying Li
   photo: jiaying-li.jpg
   info: Postdoctoral Fellow
   email: jiaying.li@uhn.ca
-  description: Jiaying obtained her M.D. from Sun Yat-sen University, majoring in Urology Surgery. She is currently joining the project of circular RNA in prostate cancer and is going to carry out series experiments.
+  description: Jiaying obtained her MD from Sun Yat-sen University, majoring in Urology Surgery. She is currently joining the project of circular RNA in prostate cancer and is going to carry out series experiments.
