--- a/_data/postdoctoral_fellows.yml
+++ b/_data/postdoctoral_fellows.yml
@@ -33,3 +33,10 @@
   info: Postdoctoral Fellow
   email: jiaying.li@uhn.ca
   description: Jiaying obtained her MD from Sun Yat-sen University, majoring in Urology Surgery. She is currently joining the project of circular RNA in prostate cancer and is going to carry out series experiments.
+  
+- name: Guangyi (Patrick) Zhang
+  photo: guangyi-zhang.jpg
+  info: Postdoctoral Fellow
+  email: guangyi.zhang@utoronto.ca
+  description: Guangyi (Patrick) Zhang completed the requirements for a Ph.D. in Electrical and Computer Engineering at Queen's University on Dec 2022. His previous research focused on using deep learning for brain-computer interfaces. He will now be working on developing cutting-edge AI-based solutions for cancer research.
+
