--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,12 @@
+- date: 20/07/2023
+  headline: "Congratulations to Linsey for passing her Master Thesis Defense!"
+ 
+- date: 11/07/2023
+  headline: "Congratulations to Perian For passing his PhD Thesis Defense!"
+ 
+- date: 05/07/2023
+  headline: "Yong's paper on <a href='https://academic.oup.com/bioinformatics/article/39/7/btad423/7218932'>MeDIP-seq pipeline</a> is published at Bioinformatics, congratulations to Yong and the team!"
+ 
 - date: 15/12/2022
   headline: "Sujun commenced on her independent laboratory at Sichuan University, congratulations!"
   
