--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: 20/07/2023
+  headline: "Congratulations to Peter for Winning the 2023 MOHCCN Health Informatics and Data Science Award!"
+  
+- date: 20/07/2023
   headline: "Congratulations to Linsey for passing her Master Thesis Defense!"
  
 - date: 11/07/2023
