--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,8 @@
-- date: 20/07/2023
-  headline: "Congratulations to Peter for Winning the 2023 MOHCCN Health Informatics and Data Science Award!"
+- date: 24/08/2023
+  headline: "Congratulations to Vivian on winning the Cancer Digital Intelligence Spark Award!"
+  
+- date: 03/08/2023
+  headline: "Congratulations to Peter for winning the <a href='https://www.marathonofhopecancercentres.ca/impact/news-item/eight-early-career-data-scientists-named-inaugural-health-informatics-data-scientist-awardees-following-mohccn-competition'>2023 MOHCCN Health Informatics and Data Science Award</a>!"
   
 - date: 20/07/2023
   headline: "Congratulations to Linsey for passing her Master Thesis Defense!"
