--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 24/08/2023
-  headline: "Congratulations to Vivian on winning the Cancer Digital Intelligence Spark Award!"
+  headline: "Congratulations to Vivian on winning the <a href='https://pmcdi.ca/cdi-spark-award/#Vivian-Chu'>Cancer Digital Intelligence Spark Award</a>!"
   
 - date: 03/08/2023
   headline: "Congratulations to Peter for winning the <a href='https://www.marathonofhopecancercentres.ca/impact/news-item/eight-early-career-data-scientists-named-inaugural-health-informatics-data-scientist-awardees-following-mohccn-competition'>2023 MOHCCN Health Informatics and Data Science Award</a>!"
@@ -23,7 +23,7 @@
   headline: "Vivian, Magnus and Lin joined us as graduate students, welcome!"
   
 - date: 22/11/2022
-  headline: "Mona recieved a Keystone Symposia Scholarship, congratulations!"
+  headline: "Mona recieved the <a href='https://tks.keystonesymposia.org/index.cfm?e=Web.Meeting.PastScholarships&Meetingid=1955'>Keystone Symposia Scholarship</a>, congratulations!"
   
 - date: 01/11/2022
   headline: "Our collaborative study of 5hmC in prostate tumors and liquid biopsies is online at PNAS."
