--- a/_data/graduate_students.yml
+++ b/_data/graduate_students.yml
@@ -17,13 +17,13 @@
   description: Helen received her undergraduate degree from McMaster University in the BHSc (Hons) program with a specialization in Biochemistry and a minor in Mathematics. She is currently a PhD Candidate in the Department of Medical Biophysics. Her current project focuses on M6A modifications in cancer.
 
 - name: Linsey Gong
-  photo: linsey.png
+  photo: linsey-gong.jpeg
   info: MSc Student
   email: linsey.gong@mail.utoronto.ca
   description: Linsey obtained her bachelor’s degree from the University of Toronto with a double major in Molecular Genetics and Pharmacology. Currently, she is an MSc student in the Department of Medical Biophysics and co-supervised by Dr. Faiyaz Notta. Linsey is investigating the usage of circulating extracellular RNAs as diagnostic and predictive biomarkers in pancreatic cancer. 
 
 - name: Peter Her
-  photo: peter.jpeg
+  photo: peter-her.jpg
   info: MSc Student
   email: peter.her@mail.utoronto.ca
   description: Peter obtained his bachelor’s degree from McGill University with a major in Pharmacology. He is currently a Masters student in the Department of Medical Biophysics. He is interested in characterizing the molecular mechanism and clinical utilization of RNA circularization, and looking at circular RNAs involved in immune regulation and tumour immunity.
