--- a/_data/graduate_students.yml
+++ b/_data/graduate_students.yml
@@ -24,7 +24,7 @@
 
 - name: Peter Her
   photo: peter-her.jpg
-  info: MSc Student
+  info: PhD Candidate
   email: peter.her@mail.utoronto.ca
   description: Peter obtained his bachelor’s degree from McGill University with a major in Pharmacology. He is currently a Masters student in the Department of Medical Biophysics. He is interested in characterizing the molecular mechanism and clinical utilization of RNA circularization, and looking at circular RNAs involved in immune regulation and tumour immunity.
 
